Nova versao do componente html2pdflistener, usando agora o openhtmltopdf